# lite-sort

./: .editorconfig  .gitignore  README.md  TODO  justfile  lite-sort  lite_sort.py  main.py  pyproject.toml  requirements.txt  test.py  utils.py
.github/workflows/: pypi.yml  test-pypi.yml  testpypi.yml
src/: lite_sort.py
src/litesort/: config.py  main.py  utils.py
